basic concept workiing with console log

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,24 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body ng-app="myApp">
+    <div class="stage">
+        <div class="stage-scene">
+
+        </div>
+        <div class="stage-scene">
+
+        </div>
+        <div class="stage-scene">
+
+        </div>
+        <div class="stage-scene">
+
+        </div>
+    </div>
     <div class="timer" scroll>
+        <div class="timer-section">
+
+        </div>
         <div class="timer-section">
 
         </div>
