--- a/app/index.html
+++ b/app/index.html
@@ -5,17 +5,25 @@
 </head>
 <body ng-app="myApp">
     <div class="stage">
-        <div class="stage-scene">
-
+        <div class="stage-scene scene1">
+            <div class="content">
+                <h1>Scene 1</h1>
+            </div>
         </div>
-        <div class="stage-scene">
-
+        <div class="stage-scene scene2">
+            <div class="content">
+                <h1>Scene 2</h1>
+            </div>
         </div>
-        <div class="stage-scene">
-
+        <div class="stage-scene scene3">
+            <div class="content">
+                <h1>Scene 3</h1>
+            </div>
         </div>
-        <div class="stage-scene">
-
+        <div class="stage-scene scene4">
+            <div class="content">
+                <h1>Scene 4</h1>
+            </div>
         </div>
     </div>
     <div class="timer" scroll>
