add scope variable

--- a/app/index.html
+++ b/app/index.html
@@ -8,21 +8,25 @@
         <div class="stage-scene scene1">
             <div class="content">
                 <h1>Scene 1</h1>
+                scope.slide: {{slide}}
             </div>
         </div>
         <div class="stage-scene scene2">
             <div class="content">
                 <h1>Scene 2</h1>
+                scope.slide: {{slide}}
             </div>
         </div>
         <div class="stage-scene scene3">
             <div class="content">
                 <h1>Scene 3</h1>
+                scope.slide: {{slide}}
             </div>
         </div>
         <div class="stage-scene scene4">
             <div class="content">
                 <h1>Scene 4</h1>
+                scope.slide: {{slide}}
             </div>
         </div>
     </div>
