--- a/app/index.html
+++ b/app/index.html
@@ -5,28 +5,24 @@
 </head>
 <body ng-app="myApp">
     <div class="stage">
-        <div class="stage-scene scene1">
+        <div class="stage-scene scene1" ng-show="slide === 0">
             <div class="content">
                 <h1>Scene 1</h1>
-                scope.slide: {{slide}}
             </div>
         </div>
-        <div class="stage-scene scene2">
+        <div class="stage-scene scene2" ng-show="slide === 1">
             <div class="content">
                 <h1>Scene 2</h1>
-                scope.slide: {{slide}}
             </div>
         </div>
-        <div class="stage-scene scene3">
+        <div class="stage-scene scene3" ng-show="slide === 2">
             <div class="content">
                 <h1>Scene 3</h1>
-                scope.slide: {{slide}}
             </div>
         </div>
-        <div class="stage-scene scene4">
+        <div class="stage-scene scene4" ng-show="slide === 3">
             <div class="content">
                 <h1>Scene 4</h1>
-                scope.slide: {{slide}}
             </div>
         </div>
     </div>
