add final scene

--- a/app/index.html
+++ b/app/index.html
@@ -29,20 +29,19 @@
                 <p>{{change * 100 | number:0}}% of section {{slide + 1}} scrolled.</p>
             </div>
         </div>
+        <div class="stage-scene scene5" ng-show="slide === 4">
+            <div class="content">
+                <h1>Thank you</h1>
+                <p>for viewing this demo!</p>
+            </div>
+        </div>
     </div>
     <div class="timer" scroll>
-        <div class="timer-section">
-
-        </div>
-        <div class="timer-section">
-
-        </div>
-        <div class="timer-section">
-
-        </div>
-        <div class="timer-section">
-
-        </div>
+        <div class="timer-section"></div>
+        <div class="timer-section"></div>
+        <div class="timer-section"></div>
+        <div class="timer-section"></div>
+        <div class="timer-section"></div>
     </div>
     <script src="bower_components/angular/angular.js"></script>
     <script src="app.js"></script>
