add angular aniamte and transitions

--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,7 @@
         <div class="timer-section"></div>
     </div>
     <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
