add scene transition

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 </head>
 <body ng-app="myApp" ng-controller="scrollController">
     <div class="stage">
-        <div ng-view></div>
+        <div ng-view class="view"></div>
     </div>
     <div class="timer" scroll>
         <div class="timer-section"></div>
